[package]
name = "send_wrapper"
version = "0.6.0"
edition = "2018"
authors = ["Thomas Keh"]
license = "MIT/Apache-2.0"
description = """
This Rust library implements a wrapper type called SendWrapper which allows you to move around non-Send types
between threads, as long as you access the contained value only from within the original thread. You also have to
make sure that the wrapper is dropped from within the original thread. If any of these constraints is violated,
a panic occurs."""
keywords = ["send", "wrapper", "thread_local"]
readme = "README.md"
repository = "https://github.com/thk1/send_wrapper"
documentation = "https://docs.rs/send_wrapper"
categories = ["rust-patterns"]

[features]
futures = ["futures-core"]

[dependencies]
futures-core = { version = "0.3", optional = true }

[dev-dependencies]
futures-executor = "0.3"
futures-util = "0.3"

[package.metadata.docs.rs]
all-features = true
# Needed to add "Available on crate feature `futures` only." messages to docs
rustdoc-args = ["--cfg", "docsrs"]
